<resources>
    <string name="app_name">Spend Alert</string>
    <string name="title_home">Home</string>
    <string name="title_setlimit">Set Limit</string>
    <string name="title_stats">Stats</string>
    <string name="title_advice">Advice</string>

    <!--Advice page-->
    <string name="advice_text1">Do you feel that you are losing control over your in-game purchases? Get advice and help at the UKs National Problem Gambling Helpline:</string>
    <string name="advice_text2">Would you like to connect with other gamers experiencing similar troubles? have a look at ON-LINE GAMERS ANONYMOUS:</string>

    <string name="helpline"><font color="#41C7DB">1-800-522-4700</font> </string>


    <string name="gamersAnon"><font color="#41C7DB">https://olganon.org/home</font> </string>

    <!--Set Limit page-->
    <string name="setlimit_text1">Select the timeframe for your tracker starting today. Your tracker will reset after the chosen interval.</string>
    <string name="setlimit_text2">Choose your spending limit</string>



    <string name="ok">OK</string>
    <string name="save">SAVE</string>
    <string name="waringSet2"><font color="#ff0040">Please set a timeframe AND a limit.</font> </string>
    <string name="limit0"><font color="#ff0040">Your limit is 0. You will be alerted as soon as you spend any money on games.</font> </string>
    <!--shared-->
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>

    <!--Home page-->
    <string name="welcome">Welcome to Spend Alert.</string>
    <string name="welcome2">Giving you control over your in-game purchases.</string>
    <string name="learn"><font color="#41C7DB">Learn more</font> </string>
    <string name="homeString1">You have spent</string>
    <string name="homeString2">on games </string>
    <string name="today">today.</string>
    <string name="thisWeek">this week.</string>
    <string name="thisMonth">this month.</string>
    <string name="bartext">Text under the bar.</string>

    <string name="homeInfo1">You will be alerted once you have reached your limit.</string>
    <string name="homeInfo2">You have reached your limit.</string>

    <!--Learn More page-->
    <string name="LearnMoreHeader">About Spend Alert</string>
    <string name="About">Spend Alert will help you regulate your in game purchases. Set your limit and time frame for spending of either a day, a week or a month.</string>
    <string name="About2"> Once you have reached your limit Spend Alert will warn you. You have the choice to cancel your spending or continue. If you decide to continue you will be given a 15 minute cool down time, to prevent any spurr of the moment actions.</string>
    <string name="About3">What will this look like? Try it out here:</string>
    <string name="Trigger">Trigger Spend Alert</string>
    <string name="Back">Back</string>

    <!--Stats page-->
    <string name="StatsHeader">Review your spending</string>
    <string name="Stats2">of the last:</string>
    <string name="Stats3"> Please select one of the above.</string>


    <!--Warning pop up-->
    <string name="Continue"><font color="#ff0040">Continue purchase</font> </string>
    <string name="Cancel"><font color="#22RB22">Stick to my limit</font> </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>