<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectvers2.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_setlimit"
            app:destination="@id/navigation_setlimit" />
        <action
            android:id="@+id/action_navigation_home_to_learnMore"
            app:destination="@id/learnMore" />
    </fragment>


    <fragment
        android:id="@+id/navigation_setlimit"
        android:name="com.example.projectvers2.Setlimit"
        android:label="@string/title_setlimit"
        tools:layout="@layout/fragment_setlimit" >
        <action
            android:id="@+id/action_navigation_setlimit_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.projectvers2.Stats"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_advice"
        android:name="com.example.projectvers2.Advice"
        android:label="@string/title_advice"
        tools:layout="@layout/fragment_advice" />
    <fragment
        android:id="@+id/learnMore"
        android:name="com.example.projectvers2.LearnMore"
        android:label="@string/LearnMoreHeader"
        tools:layout="@layout/fragment_learn_more" >
        <action
            android:id="@+id/action_learnMore_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


</navigation>