<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SpendingView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stats">

    <TextView
        android:id="@+id/StatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="110dp"
        android:text="@string/StatsHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="181dp"
        android:layout_height="210dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatsHeader">

        <RadioButton
            android:id="@+id/dayButtonStats"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:text="@string/day" />

        <RadioButton
            android:id="@+id/weekButtonStats"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/monthButtonStats"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/month" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="106dp"
        android:layout_height="31dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="35dp"
        android:text="@string/Stats2"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatsHeader" />

    <TextView
        android:id="@+id/TextSpending"
        android:layout_width="169dp"
        android:layout_height="64dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="112dp"
        android:text="@string/Stats3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>