<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnMore">

    <TextView
        android:id="@+id/LearnMore"
        android:layout_width="195dp"
        android:layout_height="43dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="117dp"
        android:text="@string/LearnMoreHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/About1Text"
        android:layout_width="312dp"
        android:layout_height="73dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:text="@string/About"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LearnMore" />

    <TextView
        android:id="@+id/About2Text"
        android:layout_width="343dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:text="@string/About2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About1Text" />

    <TextView
        android:id="@+id/About3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="77dp"
        android:text="@string/About3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About2Text" />

    <Button
        android:id="@+id/triggerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="94dp"
        android:text="@string/Trigger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About3Text" />

</androidx.constraintlayout.widget.ConstraintLayout>