<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".Setlimit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="156dp"
        android:text="@string/title_setlimit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:text="@string/setlimit_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/RadioSetLimit"
        android:layout_width="121dp"
        android:layout_height="146dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButtonDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:onClick="onSetLimRadioButtonClicked"
            android:text="@string/day" />

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:onClick="onSetLimRadioButtonClicked"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:onClick="onSetLimRadioButtonClicked"
            android:text="@string/month" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="205dp"
        android:layout_height="36dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="86dp"
        android:text="@string/setlimit_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioSetLimit" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="271dp"
        android:layout_height="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="60dp"
        android:max="200"
        android:progress="3"
        android:thumb="@android:drawable/btn_radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenAmount" />

    <TextView
        android:id="@+id/chosenAmount"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:text="ChosenAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/OKbutton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="158dp"
        android:onClick="onSetLimOkayClicked"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/warningSet2Text"
        android:layout_width="235dp"
        android:layout_height="19dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="12dp"
        android:text="@string/waringSet2"
        app:layout_constraintBottom_toTopOf="@+id/OKbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>