<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/adviceText1"
        android:layout_width="292dp"
        android:layout_height="73dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="52dp"
        android:text="@string/advice_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdvice"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="48dp"
        android:text="@string/title_advice"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/adviceText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="195dp"
        android:clickable="true"
        android:text="@string/helpline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceText1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="23dp"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceText1" />

    <TextView
        android:id="@+id/AdviceText2"
        android:layout_width="286dp"
        android:layout_height="61dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:text="@string/advice_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="144dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/gamersAnon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdviceText2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="17dp"
        android:src="@drawable/ic_baseline_people_24"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdviceText2" />

</androidx.constraintlayout.widget.ConstraintLayout>