<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home" >

    <TextView
        android:id="@+id/WelcomeText1"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="85dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WelcomeText2"
        android:layout_width="323dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="37dp"
        android:text="@string/welcome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText1" />

    <TextView
        android:id="@+id/LearnMoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="165dp"
        android:text="@string/learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="76dp"
        android:max="500"
        android:progress="200"
        android:progressTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LearnMoreText" />

    <TextView
        android:id="@+id/SpentText1"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="230dp"
        android:text="@string/homeInfo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="116dp"
        android:onClick="timeFrameText"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>